--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -9,8 +9,7 @@
         <span class="icon-bar"></span>
       </button>
       <%= link_to root_path, class: "navbar-brand" do %>
-        <i class="fa fa-users"></i>
-        Doc-Uploader
+        Roostify
       <% end %>
     </div>
     <!-- Collect the nav links, forms, and other content for toggling -->
