--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,5 +1,5 @@
 <% if user_signed_in? %>
-
+  <h1>You are signed in</h1>
 <% else %>
   <div class="col-md-4 col-md-offset-4">
     <h2>Welcome</h2>
