--- a/app/views/documents/new.html.erb
+++ b/app/views/documents/new.html.erb
@@ -1,24 +1,6 @@
 <div class="row">
   <div class="col-md-6 col-md-offset-3">
-    <h2 class="text-center">Create Your Document</h2>
-    <div>
-      <%= form_for @document, url: new_document_path, html: { multipart: true } do |f| %>
-      <div class="form-group">
-        <%= f.label "Loan Amount*" %>
-        <%= f.text_field :loan_amount, class: 'form-control' %>
-      </div>
-      <div class="form-group">
-        <%= f.label "Down Payment*" %>
-        <%= f.text_field :down_payment, class: 'form-control' %>
-      </div>
-      <div class="form-group">
-        <%= f.label "Interest Rate*" %>
-        <%= f.text_field :interest_rate, class: 'form-control' %>
-      </div>
-      <div class="form-group">
-        <%= f.submit "Submit", class: 'btn btn-primary' %>
-      </div>
-    <% end %>
-    </div>
+    <h2 class="text-center">Create a document</h2>
+    <div><%= render "form" %></div>
   </div>
 </div>
