--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,5 +1,20 @@
 <% if user_signed_in? %>
   <div class="col-md-4 col-md-offset-4">
+    <h2>Your Documents</h2>
+
+    <table class="table table-hover">
+      <thead>
+        <tr>
+          <th>Id</th>
+          <th>Loan Amount</th>
+          <th>Down Payment</th>
+          <th>Interest Rate</th>
+          <th>View</th>
+        </tr>
+      </thead>
+      <tbody></tbody>
+    </table>
+
     <div class="well">
       <%= link_to "Create Document", new_document_path, class: 'btn btn-primary', method: :get %>
     </div>
