--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,32 +1,16 @@
 <% if user_signed_in? %>
-  <div class="col-md-4 col-md-offset-4">
-    <h2>Your Documents</h2>
-
-    <table class="table table-hover">
-      <thead>
-        <tr>
-          <th>Id</th>
-          <th>Loan Amount</th>
-          <th>Down Payment</th>
-          <th>Interest Rate</th>
-          <th>View</th>
-        </tr>
-      </thead>
-      <tbody></tbody>
-    </table>
-
+  <div class="col-md-6 col-md-offset-3">
     <div class="well">
       <%= link_to "Create Document", new_document_path, class: 'btn btn-primary', method: :get %>
     </div>
-
   </div>
 <% else %>
-  <div class="col-md-4 col-md-offset-4">
-    <h2>Welcome</h2>
+  <div class="jumbotron text-center">
+    <h1>Welcome</h1>
     <p>Please register or sign in</p>
+    <div class="row text-center">
+        <%= link_to "Sign in", new_user_session_path, class: 'btn btn-primary', method: :get %>
+        <%= link_to "Register", new_user_registration_path, class: 'btn btn-success', method: :get %>
+    </div>
   </div>
-  <div>
-    <%= link_to "Sign in", new_user_session_path, class: 'btn btn-primary', method: :get %>
-    <%= link_to "Register", new_user_registration_path, class: 'btn btn-success', method: :get %>
-  </div>
-  <% end %>
+<% end %>
