--- a/app/views/documents/index.html.erb
+++ b/app/views/documents/index.html.erb
@@ -24,8 +24,38 @@
     </tbody>
   </table>
 
-  <div class="well">
-    <%= link_to "Create New", new_document_path, class: 'btn btn-primary', method: :get %>
-  </div>
+  <div class="container">
+    <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#formModal">Create New</button>
 
+    <!-- Modal -->
+    <div class="modal fade" id="formModal" role="dialog">
+      <div class="modal-dialog">
+        <div class="modal-content">
+          <div class="modal-header">
+            <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+            <h4 class="modal-title" id="myModalLabel">Create a document</h4>
+          </div>
+          <div class="modal-body">
+            <%= form_for :document, html: { multipart: true } do |f| %>
+              <div class="form-group">
+                <%= f.label "Loan Amount" %>
+                <%= f.text_field :loan_amount, class: 'form-control' %>
+              </div>
+              <div class="form-group">
+                <%= f.label "Down Payment" %>
+                <%= f.text_field :down_payment, class: 'form-control' %>
+              </div>
+              <div class="form-group">
+                <%= f.label "Interest Rate" %>
+                <%= f.text_field :interest_rate, class: 'form-control' %>
+              </div>
+              <div class="form-group">
+                <%= f.submit "Submit", class: 'btn btn-primary' %>
+              </div>
+            <% end %>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
 </div>
