--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -1,10 +1,4 @@
-<% if user_signed_in? %>
-  <div class="col-md-6 col-md-offset-3">
-    <div class="well">
-      <%= link_to "Create Document", new_document_path, class: 'btn btn-primary', method: :get %>
-    </div>
-  </div>
-<% else %>
+<% if !user_signed_in? %>
   <div class="jumbotron text-center">
     <h1>Welcome</h1>
     <p>Please register or sign in</p>
