--- a/app/views/documents/index.html.erb
+++ b/app/views/documents/index.html.erb
@@ -50,15 +50,15 @@
             <%= form_for :document, html: { multipart: true } do |f| %>
               <div class="form-group">
                 <%= f.label "Loan Amount" %>
-                <%= f.text_field :loan_amount, class: 'form-control' %>
+                <%= f.text_field :loan_amount, required: true, class: 'form-control' %>
               </div>
               <div class="form-group">
                 <%= f.label "Down Payment" %>
-                <%= f.text_field :down_payment, class: 'form-control' %>
+                <%= f.text_field :down_payment, required: true, class: 'form-control' %>
               </div>
               <div class="form-group">
                 <%= f.label "Interest Rate" %>
-                <%= f.text_field :interest_rate, class: 'form-control' %>
+                <%= f.text_field :interest_rate, required: true, class: 'form-control' %>
               </div>
               <div class="form-group">
                 <%= f.submit "Submit", class: 'btn btn-primary' %>
