--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -9,7 +9,7 @@
         <span class="icon-bar"></span>
       </button>
       <%= link_to root_path, class: "navbar-brand" do %>
-        Roostify
+        <img src="https://s3-us-west-1.amazonaws.com/roostifystatic/static/landing/images/topbar/logo_white.png", id='logo'>
       <% end %>
     </div>
     <!-- Collect the nav links, forms, and other content for toggling -->
