--- a/app/views/documents/_form.html.erb
+++ b/app/views/documents/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_for :document, html: { multipart: true } do |f| %>
+<%= form_for :document, html: { multipart: true, id: 'documentForm' } do |f| %>
   <div class="form-group">
     <%= f.label "Loan Amount" %>
     <%= f.text_field :loan_amount, required: true, class: 'form-control' %>
@@ -12,6 +12,6 @@
     <%= f.text_field :interest_rate, required: true, class: 'form-control' %>
   </div>
   <div class="form-group">
-    <%= f.submit "Submit", class: 'btn btn-primary', onclick: 'return validateForm();' %>
+    <%= f.submit "Submit", class: 'btn btn-primary' %>
   </div>
 <% end %>
