--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -3,8 +3,8 @@
     <h1>Welcome</h1>
     <p>Please register or sign in</p>
     <div class="row text-center">
-        <%= link_to "Sign in", new_user_session_path, class: 'btn btn-primary', method: :get %>
-        <%= link_to "Register", new_user_registration_path, class: 'btn btn-success', method: :get %>
+        <%= link_to "Sign in", new_user_session_path, class: 'btn btn-default', method: :get %>
+        <%= link_to "Register", new_user_registration_path, class: 'btn btn-default', method: :get %>
     </div>
   </div>
 <% end %>
