--- a/app/assets/stylesheets/pages.scss
+++ b/app/assets/stylesheets/pages.scss
@@ -6,15 +6,15 @@
   background-color: #342d47 !important
 }
 
-h1 {
+#home-h1 {
   color: #dd4952 !important;
 }
 
-p {
+#home-p {
   color: #ffffff !important;
 }
 
-.btn {
+.home-btn {
     border: 1px solid #fff !important;
     padding: 7px 15px !important;
     border-radius: 2px !important;
