--- a/app/views/documents/_form.html.erb
+++ b/app/views/documents/_form.html.erb
@@ -1,14 +1,17 @@
-<%= bootstrap_form_for :document, label_errors: true, html: { multipart: true } do |f| %>
-  <div class="form-group">
-    <%= f.number_field :loan_amount, prepend: "$", required: true, pattern: "/[1-9][0-9]*/", title: "loan amount must be at least $1", class: 'form-control', label_class: "required" %>
-  </div>
-  <div class="form-group">
-    <%= f.number_field :down_payment, prepend: "$", required: true, pattern: "/^\d+$/", title: "down payment cannot be negative", label_class: "required" %>
-  </div>
-  <div class="form-group">
-    <%= f.number_field :interest_rate, append: "%", required: true, title: "interest rate cannot be negative", label_class: "required" %>
-  </div>
-  <div class="form-group">
-    <%= f.submit "Submit" %>
-  </div>
+<%= form_for :document, html: { multipart: true } do |f| %>
+    <div class="form-group">
+      <%= f.label "Loan Amount" %>
+      <%= f.text_field :loan_amount, required: true, pattern: "[1-9][0-9]*", title: "loan amount must be at least $1", class: 'form-control' %>
+    </div>
+    <div class="form-group">
+      <%= f.label "Down Payment" %>
+      <%= f.text_field :down_payment, required: true, pattern: "[1-9][0-9]*", title: "down payment cannot be negative", class: 'form-control' %>
+    </div>
+    <div class="form-group">
+      <%= f.label "Interest Rate" %>
+      <%= f.text_field :interest_rate, required: true, pattern: "[1-9][0-9]*", title: "interest rate cannot be negative", class: 'form-control' %>
+    </div>
+    <div class="form-group">
+      <%= f.submit "Submit", class: 'btn btn-primary' %>
+    </div>
 <% end %>
